feat: 增加部分接口的注释，修改标题
